<resources>
    <string name="app_name">Tweaks</string>
    <string name="app_name_upr_cse">TWEAKS</string>

    <string name="title_monitor">Monitor</string>
    <string name="title_kernel">Kernel</string>
    <string name="title_about">About</string>
    <string name="kernel_prefix">Kernel:</string>
    <string name="title_little_max">Little max:</string>
    <string name="title_big_max">Big max:</string>
    <string name="cpu_gov">CPU gov:</string>
    <string name="dev_board">Board:</string>
    <string name="love"><![CDATA[</> with ❤️ by rad]]></string>
    <string name="percent">%</string>
    <string name="title_hp_gain">Headphone Gain</string>
    <string name="title_mp_gain">Microphone Gain</string>

    <string name="title_kcal">COLOR CALIBRATION</string>
    <string name="rgb_adj">RGB ADJUSTMENTS</string>
    <string name="kcal_sat">Saturation</string>
    <string name="kcal_val">Value</string>
    <string name="kcal_hue">Hue</string>
    <string name="kcal_rst_desc">Reset back to default settings</string>
    <string name="kcal_rst">Reset colors</string>
    <string name="kcal_pre_set">Pre Set Colors</string>
    <string name="kcal_pre_set_desc">Some Cool Colors for ya!</string>

    <string name="txt_km">Kernel Manager</string>
    <string name="txt_faqs">FAQs</string>
    <string name="faqs_desc">All about app and related queries</string>
    <string name="opn_src_txt">Open source licenses</string>
    <string name="opn_src_desc">Open source libraries and their license</string>

    <string name="title_vib">Haptic Feedback</string>
    <string name="txt_strength">Strength</string>
    <string name="title_dis_cont">Display Control</string>
    <string name="txt_srgb">sRGB Colors</string>
    <string name="txt_kcal">Color Calibration (KCAL)</string>
    <string name="srgb_desc">Enable/Disable sRGB colors</string>
    <string name="kcal_desc">Tune RGB and others from here</string>
    <string name="title_sound_cont">Sound Control</string>
    <string name="hp_gain_desc">Tune headphone digital gain</string>
    <string name="mc_gain_desc">Tune device microphone gain</string>
    <string name="title_spec">SPECTRUM</string>
    <string name="txt_bbm">Better Battery Mode</string>
    <string name="bbm_desc">Aims for better battery life</string>
    <string name="txt_obm">Overall Balance Mode</string>
    <string name="obm_desc">Default kernel profile for overall balance</string>
    <string name="txt_pm">Performance Mode</string>
    <string name="pm_desc">Tuned for top tier performance</string>
    <string name="title_spec_game">GAMING</string>
    <string name="txt_gm">Enable/Disable Gaming Mode</string>
    <string name="gm_desc">Aims for Better Gaming performance</string>
    <string name="txt_auto_sync">Disable Auto-Sync feature</string>
    <string name="auto_sync_desc">Can improve network traffic</string>
    <string name="txt_rt_mon">Real-Time FPS/CPU Monitoring</string>
    <string name="rt_mon_desc">Will display real time fps and cpu usage</string>
    <string name="diag_hp_left_gain">Headphone left channel gain</string>
    <string name="diag_hp_right_gain">Headphone right channel gain</string>

    <string name="title_cpu">CPU</string>
    <string name="title_gpu">GPU</string>
    <string name="txt_gpu_usage">GPU Usage:</string>
    <string name="gpu_cuurent_freq">GPU cuurent freq:</string>
    <string name="gpu_max_freq">GPU max freq:</string>
    <string name="txt_gpu_model">GPU model:</string>
    <string name="title_mem">MEMORY</string>
    <string name="title_batt">BATTERY</string>
    <string name="txt_free_mem">Free memory:</string>
    <string name="txt_tot_mem">Total memory:</string>
    <string name="txt_used_mem">Used memory:</string>
    <string name="txt_batt_stats">Charge status:</string>
    <string name="txt_batt_temp">Temperature:</string>
    <string name="txt_batt_dur">Duration:</string>
    <string name="title_sys">SYSTEM</string>
    <string name="txt_up_tm">Uptime:</string>
    <string name="txt_dp_slp">Deep sleep:</string>
    <string name="txt_ld_avg">Loadavg:</string>
    <string name="txt_ent">Entropy</string>
    <string name="txt_wg_ver">WireGuard version:</string>
    <string name="mhz">MHz</string>
    <string name="txt_batt_lvl">Charge level:</string>
    <string name="tit_spectrum">SPECTRUM</string>
    <string name="txt_prof">PROFILES</string>
    <string name="txt_spec">Spectrum</string>
    <string name="head_spec">Spectrum Profiles</string>
    <string name="desc_spec">Profile based kernel management</string>
    <string name="head_misc">Miscellaneous</string>
    <string name="title_ffc">Force Fast Charge</string>
    <string name="title_tcp">TCP Congestion Algorithm</string>
    <string name="kcal_con">Contrast</string>

    <string name="faq_q1">Q. What is TweaksKM?</string>
    <string name="faq_a1">A. TweaksKM is a simple Linux kernel manager app for Android™ devices running on Android L or newer, which is open source and designed beautifully with Material design.</string>
    <string name="faq_q2">Q. What is Kernel?</string>
    <string name="faq_a2">A. The kernel is a computer program at the core of a computer\'s operating system with complete control over everything in the system. It is an integral part of any operating system. It is the portion of the operating system code that is always resident in memory.</string>
    <string name="faq_q3">Q. Where we can find sources of TweaksKM?</string>
    <string name="faq_a3">A. Sources can be found on GitHub - https://github.com/theradcolor/TweaksKM</string>
    <string name="faq_q4">Q. How we can contribute to it?</string>
    <string name="faq_a4">A. Contributions are always welcome, please read Docs - https://github.com/theradcolor/TweaksKM/blob/master/CONTRIBUTING.md</string>
    <string name="faq_q5">Q. How to help in Translation?</string>
    <string name="faq_a5">A. Project strings can be found on Crowdin - https://crowdin.com/project/tweakskm</string>
    <string name="faq_q6">Q. Some stuffs and things are missing in app!</string>
    <string name="faq_a6">A. We are currently in alpha stage.</string>
    <string name="boot_txt">Great! will set on boot</string>
    <string name="txt_gpu_min_freq">GPU minimum frequency</string>
    <string name="txt_gpu_pwr_lvl">Default GPU power level</string>
    <string name="txt_gpu_max_freq">GPU maximum frequency</string>
    <string name="txt_gpu_gov">GPU governer</string>
    <string name="txt_cpu_gov">CPU governor</string>
    <string name="txt_cpu_min_freq">CPU minimum frequency</string>
    <string name="txt_cpu_max_freq">CPU maximum frequency</string>
    <string name="txt_big_clus">BIG CLUSTER</string>
    <string name="txt_lit_clus">LITTLE CLUSTER</string>

    <string name="spec_not_supp">Spectrum not supported</string>
    <string name="tit_updater">Updater</string>

    <string name="updater_info_text">From here you can download and update your linux kernel, downloaded kernel will be stores in /sdcard/tweakskm/kernels/ as a zip. you have to flash via device recovery as manual flasher is still here not implemented yet!</string>
    <string name="check_upt_txt">Check for updates</string>

</resources>
