<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SpectrumActivity"
    android:orientation="vertical"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/spec_head"
        android:textSize="20sp"
        android:layout_marginTop="6dp"
        android:padding="8dp"
        android:textColor="@color/green_light"
        android:text="@string/tit_updater"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/linux_version"
            android:lineSpacingExtra="4dp"
            android:textStyle="bold"
            android:textColor="@color/text_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@android:drawable/ic_menu_info_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/updater_info"
            android:lineSpacingExtra="4dp"
            android:text="@string/updater_info_text"
            android:textColor="@color/text_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/check_update"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:textStyle="bold"
            android:text="@string/check_upt_txt"
            android:textColor="@color/green_light"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>