<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/spec_head"
        android:textSize="20sp"
        android:layout_marginTop="6dp"
        android:padding="6dp"
        android:textColor="@color/green_light"
        android:text="@string/tit_spectrum"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_below="@+id/spec_head"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="16dp"
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginLeft="12dp"
                    android:text="@string/txt_prof"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/bbm"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple"
                    android:layout_marginTop="16dp"
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_marginTop="2dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_baseline_eco_24" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:textStyle="bold"
                            android:text="@string/txt_bbm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginTop="2dp"
                            android:textSize="13sp"
                            android:textColor="@color/text_sec"
                            android:text="@string/bbm_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Switch
                            android:id="@+id/bbmsw"
                            android:theme="@style/SelectionSwitch"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bm"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple"
                    android:layout_marginTop="12dp"
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_weight="10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_marginTop="2dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_baseline_balance_24" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:textStyle="bold"
                            android:text="@string/txt_obm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginTop="2dp"
                            android:textSize="13sp"
                            android:textColor="@color/text_sec"
                            android:text="@string/obm_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pm"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple"
                    android:layout_marginTop="12dp"
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_marginTop="2dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_baseline_power_24" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:textStyle="bold"
                            android:text="@string/txt_pm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginTop="2dp"
                            android:textSize="13sp"
                            android:textColor="@color/text_sec"
                            android:text="@string/pm_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Switch
                            android:id="@+id/pmsw"
                            android:theme="@style/SelectionSwitch"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginLeft="12dp"
                    android:text="@string/title_spec_game"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/ll_gm"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple"
                    android:layout_marginTop="16dp"
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_marginTop="2dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_baseline_gamepad_24" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:textStyle="bold"
                            android:text="@string/txt_gm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginTop="2dp"
                            android:textSize="13sp"
                            android:textColor="@color/text_sec"
                            android:text="@string/gm_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Switch
                            android:id="@+id/gmsw"
                            android:theme="@style/SelectionSwitch"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_as"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple"
                    android:layout_marginTop="12dp"
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_marginTop="2dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerInParent="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:textStyle="bold"
                            android:text="@string/txt_auto_sync"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginTop="2dp"
                            android:textSize="13sp"
                            android:textColor="@color/text_sec"
                            android:text="@string/auto_sync_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:id="@+id/dozesw"
                            android:theme="@style/checkStyle"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_mon"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple"
                    android:layout_marginTop="12dp"
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_marginTop="2dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerInParent="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:textStyle="bold"
                            android:text="@string/txt_rt_mon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginTop="2dp"
                            android:textSize="13sp"
                            android:textColor="@color/text_sec"
                            android:text="@string/rt_mon_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:id="@+id/monsw"
                            android:theme="@style/checkStyle"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/grey_light"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>